// Format:
// Date (mm/dd/yr)
// rNumber [Author]
// 	* Modifications.
// 	- Details.
//========================================

04/06/2010
	r307 [Jobbie]
	* Adoramus Update adjusted to official behavior.
	- Uses now its own SC_* and SI_* regardless to its blind status effect.

04/05/2010
	r306 [Jobbie]
	- Minor fix to WL_RELEASE skill when releasing ball. Removed displaying "Unknown-Skill"
	- Minor fix to NC_SELFDESTRUCT not checking in inventory to Self destruct item.
	- Fix a typo in status.h
	
	r305 [pakpil]
	*Added LG_PRESTIGE and LG_SHIELDPRESS skills.
	*Minor fix in LG_PIETY where its casting should be interrupted when the caster get damage.
	*Fixed bug report 346.

04/05/2010
	r304 [pakpil]
	*Added LG_PIETY skill.
	*Fixed bug report 317.

	r302 [pakpil]
	*Fixed bug report 335.
	*Fixed bug report 337.

03/30/2010
	r296 [Rytech]
	*Updated prices on items in item_db2.

03/30/2010
	r295 [Jobbie]
	* Added official feature of party name display.
	- Configuration was added to allow server owner which way to follow (Aegis or eAthena).

	r294 [Jobbie]
	- Disabled skills which are not yet implemented to avoid map-server warnings.

03/28/2010
	r293 [Jobbie]
	* Updated Warlocks skills Casting Time, After-Cast Delay, Re-use Delay and Duration.
	* Fixed wrong value of -Def for freezing status.
	* Corrected the behavior of Warg Strike when used in WoE while mounted.
	* Corrected the behavior of Summon Balls of Warlock when reaching maximum #'s of summon.

	r292 [Jobbie]
	* Fixed a mistake in calculation for Clusterbomb skill.
	* Fixed a missing case of Job Id's in pc_isriding.
	* Corrected the behavior of Reflect Shield and Reflect Damage when used vice versa.

03/26/2010
	r291 [Jobbie]
	* Fixed missing mob_chat_db.txt

03/25/2010
	r290 [Jobbie]
	* Baby Rune, Baby Guard, Baby Ranger and Baby Mechanic is now accessible mounting. Follow up r282

	r289 [Rytech]
	*Database updates.....
	-Added Sorcerer's point items that are used for their summon skills.